<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/warta"
        android:gravity="center"
        android:textSize="@dimen/title_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF8800"
        android:background="#3e2723"/>

    <TextView
        android:id="@+id/gereja"
        android:text="@string/gereja"
        android:gravity="center"
        android:textSize="21sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:textColor="#FFFFFF"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/ucapan_selamat_datang"
                android:text="@string/ucapan_selamat_datang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab1"
                android:text="@string/bab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab2"
                android:text="@string/bab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab3"
                android:text="@string/bab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab4"
                android:text="@string/bab4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab5"
                android:text="@string/bab5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/bab6"
                android:text="@string/bab6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/border"
                android:padding="5dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
